2004-05-09  Albert Astals Cid  <tsdgeos@terra.es>
	* In map browsing mode show DivisionName (CapitalDivisionName)
	* Add France map (by Yann Verley)

2004-05-09  Albert Astals Cid  <tsdgeos@terra.es>
	* Add Division -> flag asker

2004-05-08  Albert Astals Cid  <tsdgeos@terra.es>
	* Add Division -> Capital asker
	* Create boxasker abstactc base class that has most of the code that
previously was repeated at capitaldivisionasker.cpp divisioncapitalasker.cpp
and flagdivisionasker.cpp

2004-05-08  Albert Astals Cid  <tsdgeos@terra.es>
	* Add Capital -> Division asker
	* Privatize a method

2004-05-06  Albert Astals Cid  <tsdgeos@terra.es>
	* Fix gcc 3.4 compile error
	* Add capitals for africa map
	* Add capitals for spain autonomies map

2004-05-05  Albert Astals Cid  <tsdgeos@terra.es>

	* Add KGeography's webpage url to about box
	* Update TODO file
	* Increase version number to 0.2
	* Make parser give better errors with bad maps
	* Add capitals for europe map